Ебучие группы ПОЛНОСТЬЮ РАБОТАЮТ (почти, нужно будет починить енамки, чтобы оно тоже работало)